modify to lixuan

--- a/data/home/News.mdx
+++ b/data/home/News.mdx
@@ -1,3 +1,1 @@
-- **2024/03/01** - Two paper got accepted at CHI 2024
-- **2024/03/01** - I'm a news article
-- **2024/03/01** - I'm a news article
+- **2023/09/15** - One paper got accepted at T-ASE
