--- a/data/home/About.mdx
+++ b/data/home/About.mdx
@@ -1,5 +1,6 @@
-Hiroshi Ishii is the Jerome B. Wiesner Professor of Media Arts and Sciences at the MIT Media Laboratory. After joining the Media Lab in October 1995, he founded the Tangible Media Group to make digital tangible by giving physical form to digital information and computation. Here, he pursues his visions of Tangible Bits (1997) and Radical Atoms (2012) that will transcend the Painted Bits of GUIs (Graphical User Interfaces), the current dominant paradigm of HCI (Human-Computer Interaction).
+Lixuan Zhang is the Ph.D. student in Visual Information Processing and Learning ([VIPL](http://vipl.ict.ac.cn/en/)) group from the Institute of Computing Technology, Chinese Academy of Sciences, under the supervision of Prof. [Xilin Chen](http://vipl.ict.ac.cn/people/_xlchen/). He also have a close collaboration with Prof. [Meina Kan](https://vipl.ict.ac.cn/homepage/mnkan/index.html). My research interest mainly focuses on visual navigation and its application for blind and visually impaired person. Before that, I obtained my B.Eng degree in Automation from Xi'an Jiaotong University in 2021.
 
-This is an academic homepage template for researchers, built with Next.js, Tailwind CSS, and ShadcnUI. The homepage is designed to showcase your research, projects, and publications. [View on GitHub](https://github.com/anxndsgn/academic-homepage-template)
+
+<!-- This is an academic homepage template for researchers, built with Next.js, Tailwind CSS, and ShadcnUI. The homepage is designed to showcase your research, projects, and publications. [View on GitHub](https://github.com/anxndsgn/academic-homepage-template) -->
 
 [![Deployed on Zeabur](https://zeabur.com/deployed-on-zeabur-light.svg)](https://zeabur.com?referralCode=anxndsgn&utm_source=anxndsgn&utm_campaign=oss)
