--- a/data/home/About.mdx
+++ b/data/home/About.mdx
@@ -1,4 +1,4 @@
-Lixuan Zhang is the Ph.D. student in Visual Information Processing and Learning ([VIPL](http://vipl.ict.ac.cn/en/)) group from the Institute of Computing Technology, Chinese Academy of Sciences, under the supervision of Prof. [Xilin Chen](http://vipl.ict.ac.cn/people/_xlchen/). He also have a close collaboration with Prof. [Meina Kan](https://vipl.ict.ac.cn/homepage/mnkan/index.html). My research interest mainly focuses on visual navigation and its application for blind and visually impaired person. Before that, I obtained my B.Eng degree in Automation from Xi'an Jiaotong University in 2021.
+Lixuan Zhang is the Ph.D. student in Visual Information Processing and Learning ([VIPL](http://vipl.ict.ac.cn/en/)) group from the Institute of Computing Technology, Chinese Academy of Sciences, under the supervision of Prof. [Xilin Chen](http://vipl.ict.ac.cn/people/_xlchen/). He also has a close collaboration with Prof. [Meina Kan](https://vipl.ict.ac.cn/homepage/mnkan/index.html). His research interest mainly focuses on visual navigation and its application for blind and visually impaired person. Before that, He obtained his B.Eng degree in Automation from Xi'an Jiaotong University in 2021.
 
 
 
