--- a/data/bib/Publications.bib
+++ b/data/bib/Publications.bib
@@ -10,3 +10,10 @@
   doi      = {10.1109/TASE.2023.3312214}
 }
 
+@inproceedings{zhang2024prelar,
+  author    = {Zhang, Lixuan and Kan, Meina and Shan, Shiguang and Chen, Xilin},
+  booktitle = {European Conference on Computer Vision},
+  title     = {PreLAR: World Model Pre-training with Learnable Action Representation},
+  year      = {2024}
+}
+
